# mesa-dist-win

./: .gitattributes  .gitignore  LICENSE  build.cmd  build.md  buildenvconf.md  gitattributes  localdeploy.cmd  mesa-x64.iss  mesa-x86.iss  mesa3d.iss  packages.txt  quickdeploy.cmd  readme.md  releasenotes.md  relnotes.md
.github/: FUNDING.yml
buildinfo/: mingw.txt  msvc.txt
builds/: build.cmd  readme.md
buildscript/: build.cmd  cygwin.sh  readme.md  update.py
debug/: llvm-config-old.txt  llvm-config.cmd  llvm-config.txt  mesa3dmesontest.cmd  meson-mingw.cmd  meson.build  mingw-start-debugging.sh  modify-llvm-install.cmd  msysconsole.cmd  msystest.cmd  scons-msvc.cmd  test-clang-mingw-arm.cmd  test-patch.cmd  test-standalone-mingw.cmd
debugsymbols/: examples.txt  mingw-start-debugging-example.sh  mingw-start-debugging.sh
examples/: GPUCapsViewer.cmd  SiN-1998.cmd  citra-emu.cmd  desmume.cmd  desmume2.cmd  readme.txt  rpcs3.cmd  swr.cmd
glcontextsamples/: desmume.cmd  readme.txt  rpcs3.cmd
lib/: fix-pc-files.cmd
local/: localdeploy-x64.cmd  localdeploy-x86.cmd
patches/: clang-swr.patch  clang.patch  clover-all-targets.patch  clover.patch  d3d10sw-2.patch  d3d10sw-3.patch  d3d10sw.patch  def-fix-dzn.patch  def-fixes.patch  dual-osmesa-part2a.patch  dual-osmesa-part2b.patch  dual-osmesa.patch  egl-mingw-32-bit.patch  enablemeson.patch  filename-parity.patch  fix-clang15-link.patch  fix-gl-stack-32-bit-build-253.patch  fix-llvm-clang15-link.patch  fix-regex-static-link.patch  forcestaticzlib.patch  lavapipe-32-bit-msvc-buildfix.patch  lavapipe-mingw.patch  libmesa_util-clang.patch  link-clang-like-llvm.patch  link-ole32.patch  llvm9.patch  mcjit-arm64.patch  mclc-all-targets.patch  mclc-clang15.patch  mclc-clang16.patch  mclc-llvm+clang18.patch  mclc-llvm+clang22.patch  meson-build-both-osmesa.patch  mingw-CRT-link-fix.patch  (+26 more)
(+130 files in other folders)
